# ccrf

./: README.md  setup.cfg
src/ccrf/: __init__.py  ccrf.py  crf.py  patcrf.py  utils.py
