[metadata]
name = ccrf
version = 0.0.2
author = Sean Papay
author_email = sean.papay@gmail.com
description = Linear-chain CRFs constrained to output from a regular language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/person594/ccrf
project_urls =
    Bug Tracker = https://github.com/person594/ccrf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    automic==0.0.1
    torch>=1.8.0


[options.packages.find]
where = src
